syntax = "proto3";

package manythings.mitosis.v1beta1.context;

import "gogoproto/gogo.proto";

option go_package = "github.com/many-things/mitosis/x/context/types";

// Signer payload for Cosmos chains
message CosmosSigner {
  uint64 account_number = 1;
  uint64 sequence_number = 2;
}

// Signer payload for EVM based chains
message EvmSigner {
  uint64 nonce = 1;
}

// Signer message
message Signer {
  // SignerStatus
  enum Status {
    // Unspecified operation status
    STATUS_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "StatusUnspecified"];

    // Signer is initializing
    STATUS_INIT = 1 [(gogoproto.enumvalue_customname) = "StatusInit"];

    // Signer is ready
    STATUS_READY = 2 [(gogoproto.enumvalue_customname) = "StatusReady"];
  }

  // Signer chain
  string chain = 1;

  // Signer ID
  uint64 id = 2;

  // Signer public key
  bytes pub_key = 3;

  // Signer status
  Status status = 4;

  // Signer payload
  oneof payload {
    CosmosSigner cosmos = 5;
    EvmSigner evm = 6;
  }
}
