syntax = "proto3";

package manythings.mitosis.event;

import "cosmos/base/v1beta1/coin.proto";
import "mitosis/event/v1beta1/operation.proto";

option go_package = "github.com/many-things/mitosis/x/event/types";

// IncomingEvent
message IncomingEvent {
  reserved 6, 7;

  string chain_id = 1;
  uint64 block_height = 2;
  string tx_hash = 3;
  uint64 event_index = 4;
  bytes dest_addr = 5;

  // RESERVED: 6
  // RESERVED: 7

  repeated cosmos.base.v1beta1.Coin funds = 8;

  Operation operation = 9;
}

// OutgoingEvent => ref. evm call response
message OutgoingEvent {
  string chain_id = 1;
  uint64 height = 2;
  string tx_hash = 3;
  bool ok = 4;
  bytes result = 5;
}
